[gd_scene load_steps=6 format=3 uid="uid://xchg8t8xhh1g"]

[ext_resource type="Script" path="res://scenes/game/characters/npc/npc.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dyc6ehkjx7n2g" path="res://scenes/game/characters/actor.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b7i1xjl1artit" path="res://scenes/game/misc/fx/fx_chatter.tscn" id="3"]
[ext_resource type="Script" path="res://scenes/game/characters/npc/npc_wait.gd" id="3_xr67u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqua3"]
size = Vector2(200, 113)

[node name="NPC" instance=ExtResource("2")]
script = ExtResource("1")
text_id = ""
face_player = true

[node name="AnimationPlayer" parent="." index="0"]
root_node = NodePath("")

[node name="Wait" type="Node" parent="StateMachine" index="0"]
script = ExtResource("3_xr67u")

[node name="DialogueArea" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueArea" index="0"]

[node name="TargetArea" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea" index="0"]
position = Vector2(0, -22.5)
shape = SubResource("RectangleShape2D_mqua3")

[node name="Chatter" parent="." index="6" instance=ExtResource("3")]
position = Vector2(11, -30)

[connection signal="body_entered" from="DialogueArea" to="." method="_on_dialogue_area_entered"]
[connection signal="body_exited" from="DialogueArea" to="." method="_on_dialogue_area_exited"]
[connection signal="body_entered" from="TargetArea" to="." method="_on_target_area_entered"]
[connection signal="body_exited" from="TargetArea" to="." method="_on_target_area_exited"]
